--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Home"
-        android:id="home"
+    <item
+        android:id="@+id/home"
         android:icon="@drawable/vector"
-        />
-    <item android:title="Leader Board"
+        android:title="Home" />
+    <item
         android:id="@+id/leaderBoard"
         android:icon="@drawable/cup"
+        android:title="Leaderboard"
 
         />
-    <item android:title="Profile"
+    <item
         android:id="@+id/profile"
         android:icon="@drawable/user"
-        />
+        android:title="Profile" />
 
-    <item android:title="Store"
+    <item
         android:id="@+id/store"
         android:icon="@drawable/store"
-        />
+        android:title="Store" />
 </menu>
