--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -40,7 +40,7 @@
         android:ems="10"
         android:background="@drawable/layout_bg"
         android:padding="15dp"
-        android:hint="Please enter your E-mail"
+        android:hint="E-mail"
         android:inputType="textEmailAddress"
         android:textColor="@color/white"
         android:textColorHint="#AEA8B2"
