--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -129,6 +129,20 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
     <TextView
+        android:id="@+id/totalPoints"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/poppins"
+        android:text="@string/_0"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="26sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView14"
+        app:layout_constraintStart_toStartOf="@+id/imageView14"
+        app:layout_constraintTop_toTopOf="@+id/imageView14" />
+
+    <TextView
         android:id="@+id/totalSteps"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
@@ -236,7 +250,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="28dp"
         android:fontFamily="@font/poppins"
         android:text="@string/_0_0_cal"
         android:textColor="@color/white"
