--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main">#28333F</color>
+    <color name="under">#4891FF</color>
+    <color name="normal">#05F31D</color>
+    <color name="over">#F33636</color>
 </resources>
