--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#28333F"
-    tools:context=".ui.main.LeaderFragment">
+    android:background="@color/main"
+    tools:context=".ui.excercises.ExerciseFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/leaderRV"
-        android:layout_width="411dp"
-        android:layout_height="585dp"
+        android:id="@+id/exerciseRecycler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        tools:listitem="@layout/leader_item" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/exercise_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
