--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
-        android:fontFamily="sans-serif-thin"
+        android:fontFamily="@font/poppins"
         android:text="Log In"
         android:textColor="@color/white"
         android:textSize="30sp"
@@ -37,11 +37,12 @@
         android:layout_width="274dp"
         android:layout_height="56dp"
         android:layout_marginTop="40dp"
-        android:ems="10"
         android:background="@drawable/layout_bg"
-        android:padding="15dp"
+        android:ems="10"
+        android:fontFamily="@font/poppins"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
+        android:padding="15dp"
         android:textColor="@color/white"
         android:textColorHint="#AEA8B2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,10 +54,11 @@
         android:layout_width="273dp"
         android:layout_height="53dp"
         android:layout_marginTop="16dp"
-        android:hint="Password"
         android:background="@drawable/layout_bg"
-        android:padding="15dp"
+        android:fontFamily="@font/poppins"
+        android:hint="Password"
         android:inputType="textPassword"
+        android:padding="15dp"
         android:textColor="@color/white"
         android:textColorHint="#AEA8B2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,8 +69,9 @@
         android:id="@+id/logInBtn"
         android:layout_width="251dp"
         android:layout_height="59dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="28dp"
         android:background="@drawable/rounded_btn"
+        android:fontFamily="@font/poppins"
         android:text="Log IN"
         android:textColor="@color/white"
         android:textSize="15sp"
@@ -77,26 +80,14 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/forgotPassTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="233dp"
-        android:layout_marginTop="26dp"
-        android:text="forgot password?"
-        android:textColor="#7B61FF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logInPassword" />
-
-    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/logInTVSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="100dp"
+        android:fontFamily="@font/poppins"
         android:text=" Sign Up"
-        android:textSize="15sp"
         android:textColor="#7B61FF"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
