--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -40,7 +40,7 @@
         android:background="@drawable/layout_bg"
         android:ems="10"
         android:fontFamily="@font/poppins"
-        android:hint="E-mail"
+        android:hint="@string/e_mail"
         android:inputType="textEmailAddress"
         android:padding="15dp"
         android:textColor="@color/white"
@@ -56,7 +56,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/layout_bg"
         android:fontFamily="@font/poppins"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="15dp"
         android:textColor="@color/white"
@@ -70,9 +70,10 @@
         android:layout_width="251dp"
         android:layout_height="59dp"
         android:layout_marginBottom="28dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:background="@drawable/rounded_btn"
         android:fontFamily="@font/poppins"
-        android:text="Log IN"
+        android:text="@string/log_in"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/logInTVSignUp"
