--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:fontFamily="sans-serif-thin"
-        android:text="Sing Up"
+        android:text="@string/sign_up"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -40,7 +40,7 @@
         android:background="@drawable/layout_bg"
         android:ems="10"
         android:padding="15dp"
-        android:hint="E-mail"
+        android:hint="@string/e_mail"
         android:inputType="textEmailAddress"
         android:textColor="@color/white"
         android:textColorHint="#AEA8B2"
@@ -56,7 +56,7 @@
         android:ems="10"
         android:background="@drawable/layout_bg"
         android:padding="15dp"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textColor="@color/white"
         android:textColorHint="#AEA8B2"
@@ -66,11 +66,13 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signUpBtn"
-        android:layout_width="251dp"
-        android:layout_height="59dp"
+        android:layout_width="wrap_content"
+        android:ems="14"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="150dp"
         android:background="@drawable/rounded_btn"
-        android:text="Sign Up"
+        android:text="@string/sign_up"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
