--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main"
-    tools:context=".ui.excercises.ExerciseFragment">
+    tools:context=".presentation.excercises.ExerciseFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
