--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient2"
-    tools:context=".ui.calculator.CalculatorFragment">
+    tools:context=".presentation.calculator.CalculatorFragment">
 
 
     <TextView
