--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/gradient2"
     android:layout_height="match_parent"
-    tools:context=".ui.splash.SplashFragment">
+    tools:context=".presentation.splash.SplashFragment">
 
 
     <androidx.appcompat.widget.AppCompatImageView
