--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="72dp"
         android:fontFamily="@font/poppins"
-        android:text="Weight"
+        android:text="@string/weight"
         android:textColor="@color/white"
         android:textSize="29sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/poppins"
-        android:text="Height"
+        android:text="@string/height"
         android:textColor="@color/white"
         android:textSize="29sp"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
