--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -112,7 +112,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginEnd="10dp"
         android:src="@drawable/frame1"
-        app:layout_constraintEnd_toStartOf="@+id/imageView14"
+        app:layout_constraintEnd_toStartOf="@+id/pointsIV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
@@ -127,7 +127,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ivMenuIcon" />
 
     <ImageView
-        android:id="@+id/imageView14"
+        android:id="@+id/pointsIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -148,9 +148,9 @@
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="26sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView14"
-        app:layout_constraintStart_toStartOf="@+id/imageView14"
-        app:layout_constraintTop_toTopOf="@+id/imageView14" />
+        app:layout_constraintEnd_toEndOf="@+id/pointsIV"
+        app:layout_constraintStart_toStartOf="@+id/pointsIV"
+        app:layout_constraintTop_toTopOf="@+id/pointsIV" />
 
     <TextView
         android:id="@+id/totalSteps"
@@ -202,7 +202,7 @@
         android:src="@drawable/blankcard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView14" />
+        app:layout_constraintTop_toBottomOf="@+id/pointsIV" />
 
     <TextView
         android:id="@+id/textView6"
