--- a/app/src/main/res/layout/fragment_body_part.xml
+++ b/app/src/main/res/layout/fragment_body_part.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient2"
+    android:background="@drawable/back_png"
     tools:context=".presentation.excercises.BodyPartFragment">
 
 
@@ -15,18 +15,19 @@
         android:layout_height="wrap_content"
         android:text="@string/recorded_exercises"
         android:layout_gravity="center"
+
         android:textColor="@color/white"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/poppins"
         android:textSize="29sp" />
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bodyPartRecycler"
         android:layout_width="match_parent"
         android:layout_marginTop="12dp"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
