OtpFragment, SuccessOrderFragment added, navigation fixes , Ui fixes

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -154,5 +154,18 @@
     <fragment
         android:id="@+id/otpFragment"
         android:name="com.example.tbc_final.presentation.store.OtpFragment"
-        android:label="OtpFragment" />
+        android:label="OtpFragment" >
+        <action
+            android:id="@+id/action_otpFragment_to_orderFinishFragment"
+            app:destination="@id/orderFinishFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/orderFinishFragment"
+        android:name="com.example.tbc_final.presentation.store.OrderFinishFragment"
+        android:label="fragment_order_finish"
+        tools:layout="@layout/fragment_order_finish" >
+        <action
+            android:id="@+id/action_orderFinishFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
