--- a/app/src/main/res/layout/fragment_nutrition.xml
+++ b/app/src/main/res/layout/fragment_nutrition.xml
@@ -8,6 +8,18 @@
     tools:context=".presentation.nutrition.NutritionFragment">
 
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calculateBtn"
+        app:layout_constraintVertical_bias="0.416" />
+
     <TextView
         android:id="@+id/grams"
         android:layout_width="wrap_content"
