--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -25,7 +25,9 @@
         android:layout_marginVertical="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/poppins"
         android:text="NIKE Air Force 1"
+        android:textAlignment="center"
         android:textColor="@color/gradient2"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/priceTV"
@@ -38,8 +40,9 @@
         android:id="@+id/priceTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins"
         android:text="16000 $"
-        android:textColor="@color/purple_500"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/appCompatTextView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,9 +55,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginVertical="36dp"
+        android:fontFamily="@font/poppins"
         android:isScrollContainer="true"
         android:padding="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/light_blue_50"
         app:layout_constraintBottom_toTopOf="@+id/orderBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
