--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -97,7 +97,8 @@
             app:destination="@id/homeFragment" />
         <action
             android:id="@+id/action_storeFragment_to_orderFragment"
-            app:destination="@id/orderFragment" />
+            app:destination="@id/orderFragment"
+            app:enterAnim="@anim/open_anim" />
     </fragment>
     <fragment
         android:id="@+id/BodyPartFragment"
@@ -109,7 +110,8 @@
             app:destination="@id/homeFragment" />
         <action
             android:id="@+id/action_leaderFragment_to_exerciseFragment"
-            app:destination="@id/exerciseFragment" />
+            app:destination="@id/exerciseFragment"
+            app:enterAnim="@anim/from_bottom" />
     </fragment>
     <fragment
         android:id="@+id/calculatorFragment"
@@ -135,6 +137,10 @@
         <argument
             android:name="type"
             app:argType="string" />
+        <action
+            android:id="@+id/action_exerciseFragment_to_BodyPartFragment"
+            app:destination="@id/BodyPartFragment"
+            app:enterAnim="@anim/back_anim" />
     </fragment>
     <fragment
         android:id="@+id/orderFragment"
@@ -142,6 +148,10 @@
         android:label="OrderFragment" >
         <argument android:name="item"
             app:argType="com.example.tbc_final.domain.model.SneakerModel$Sneaker" />
+        <action
+            android:id="@+id/action_orderFragment_to_storeFragment"
+            app:destination="@id/storeFragment"
+            app:enterAnim="@anim/back_anim" />
     </fragment>
     <fragment
         android:id="@+id/nutritionFragment"
